[package]
name = "libp2p-node-example"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.16.2"
async-std = "1.5.0"
futures = "0.3.4"
chashmap = "2.2.2"