[package]
name = "libp2p-node-example"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.16.2"
futures = "0.3.4"
chashmap = "2.2.2"
rand = "0.7.3"
bincode = "1.2.1"
clap = "2.33.0"
p2p_node_stats = { git = "https://github.com/eadventurous/p2p-node-stats"}
log = "0.4.0"
env_logger = "0.7.1"

[dependencies.serde]
version = "1.0.105"
features = ["derive"]

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]